# sample-aws-lambda-dev-local

nodejs/: Dockerfile  README.md  app.js
python/: .env.example  .gitignore  .pydevproject  Dockerfile  README.md  main.py  pyproject.toml
python/config/: .env.sample
python/docker/: Dockerfile
python/docs/: README.md
python/resources/events/: test_event.json  test_event_remote.json
python/scripts/: README.md  deploy.sh  setup-macos.sh  test-local.sh  test-remote.sh
python/scripts/config/: settings.sh
python/scripts/infra/: aws-resources.sh
python/scripts/lib/: utils.sh
python/src/: __init__.py
python/src/handlers/: __init__.py  lambda_handler.py
python/tests/: test_lambda_handler.py
